[package]
name = "igrf"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"
description = "International Geomagnetic Reference Field (IGRF) implementation in pure Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
time = "0.2"
